// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CrewAbsenceTag > Full mission absence > matches snapshot for full mission absence 1`] = `
<div>
  <span
    class="sc-iMfspz sc-jfSnVt gQPajn bzXITp Element-Tag"
  >
    <span
      class="sc-gLDzao AgKuO Element-IconBox"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <g
          transform="translate(-505 -481)"
        >
          <g
            transform="translate(506 482)"
          >
            <path
              d="M11,2a9,9,0,1,0,9,9A9,9,0,0,0,11,2Z"
              fill="currentColor"
              transform="translate(-2 -2)"
            />
          </g>
          <rect
            fill="none"
            height="20"
            transform="translate(505 481)"
            width="20"
          />
        </g>
      </svg>
    </span>
    Formation
  </span>
</div>
`;

exports[`CrewAbsenceTag > Temporary absence > matches snapshot for temporary absence 1`] = `
<div>
  <span
    class="sc-iMfspz sc-jfSnVt iTBfrD bzXITp Element-Tag"
  >
    <span
      class="sc-gLDzao AUTVw Element-IconBox"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <g
          transform="translate(280 -41)"
        >
          <g>
            <g
              fill="none"
              stroke-miterlimit="10"
            >
              <path
                d="M-266,44V42h-2v2h-4V42h-2v2h-4V59h16V44Zm2,13h-12V50h12Zm0-9h-12V46h12Z"
                stroke="none"
              />
              <path
                d="M -274 42 L -272 42 L -272 44 L -268 44 L -268 42 L -266 42 L -266 44 L -262 44 L -262 59 L -278 59 L -278 44 L -274 44 L -274 42 Z M -264 48 L -264 46 L -276 46 L -276 48 L -264 48 Z M -264 57 L -264 50 L -276 50 L -276 57 L -264 57 Z"
                fill="currentColor"
                stroke="none"
              />
            </g>
            <g
              fill="none"
              stroke="currentColor"
              stroke-miterlimit="10"
              stroke-width="2"
              transform="translate(-274 52)"
            >
              <rect
                height="3"
                stroke="none"
                width="4"
              />
              <rect
                fill="none"
                height="1"
                width="2"
                x="1"
                y="1"
              />
            </g>
          </g>
          <rect
            fill="none"
            height="20"
            transform="translate(-280 41)"
            width="20"
          />
        </g>
      </svg>
    </span>
    Récupération - abs 5j
  </span>
</div>
`;
